Clean up package, prepare for a new approach.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,16 +2,14 @@
 develop = .
 parts = devpython py.test sphinxpython sphinxbuilder releaser
 versions = versions
-show-picked-versions = true
+show-picked-versions = false
 
 [versions]
-venusian =
 
 [devpython]
 recipe = zc.recipe.egg
 interpreter = devpython
 eggs = confidant [test]
-       pyflakes
        flake8
        radon
 
@@ -36,4 +34,3 @@ eggs = confidant
 [releaser]
 recipe = zc.recipe.egg
 eggs = zest.releaser
-
