Rename from confidant to dectate.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,14 +9,14 @@ show-picked-versions = false
 [devpython]
 recipe = zc.recipe.egg
 interpreter = devpython
-eggs = confidant [test]
+eggs = dectate [test]
        flake8
        radon
 
 [py.test]
 recipe = zc.recipe.egg
-eggs = confidant
-       confidant[test]
+eggs = dectate
+       dectate[test]
        pytest
        snot
 
@@ -29,7 +29,7 @@ interpreter = ${buildout:directory}/bin/sphinxpython
 [sphinxpython]
 recipe = zc.recipe.egg
 interpreter = ${:_buildout_section_name_}
-eggs = confidant
+eggs = dectate
 
 [releaser]
 recipe = zc.recipe.egg
