--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include *.txt *.rst *.cfg *.py *.ini
 exclude .installed.cfg
-recursive-include confidant *.py
+recursive-include dectate *.py
 recursive-include tests *.py
 recursive-include doc *.rst Makefile *.py *.bat
