Enable Travis CI and Coveralls integration

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,13 @@
 [tox]
-envlist = py27,py34,pypy,pypy3
+envlist = py27,py34,pypy,pypy3,coverage
 
 [testenv]
-deps=pytest
-commands=py.test
+deps = -e{toxinidir}[test]
+commands = py.test
+
+[testenv:coverage]
+basepython = python2
+deps = {[testenv]deps}
+       coveralls
+
+commands = py.test dectate --cov dectate {posargs}
