Declaring support for Python 3.5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ script:
     - tox -e $TOXENV
 after_success:
     - if [ "$TOXENV" = 'coverage' ]; then coveralls; fi
+
+# Necessary until travis includes python 3.5 by default.
+matrix:
+  include:
+    - python: 3.5
+      env:
+      - TOXENV=py35
