--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,pypy,pypy3,coverage
+envlist = py27,py34,py35,pypy,pypy3,coverage
 
 [testenv]
 deps = -e{toxinidir}[test]
