--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py34,py35,pypy,pypy3,coverage
+envlist = py27,py34,py35,pypy,pypy3,coverage,pep8
 
 [testenv]
 deps = -e{toxinidir}[test]
@@ -11,3 +11,11 @@ deps = {[testenv]deps}
        coveralls
 
 commands = py.test dectate --cov dectate {posargs}
+
+
+[testenv:pep8]
+basepython = python2
+deps = {[testenv]deps}
+       flake8
+
+commands = flake8 dectate setup.py
