--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,28 @@
 [tox]
 envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8
+skipsdist = True
+skip_missing_interpreters = True
 
 [testenv]
+usedevelop = True
 deps = -e{toxinidir}[test]
 commands = py.test {posargs}
 
 [testenv:coverage]
 basepython = python3.5
 deps = {[testenv]deps}
-       coveralls
+       -e{toxinidir}[coverage]
 
-commands = py.test dectate --cov dectate {posargs}
+commands =
+    coverage run --source dectate -m py.test dectate {posargs}
+    coverage report -m
 
 [testenv:pep8]
 basepython = python3.5
-deps = {[testenv]deps}
-       flake8
+deps = -e{toxinidir}[pep8]
+usedevelop = False
 
-commands = flake8 dectate setup.py
+commands = flake8 --show-source dectate setup.py
 
 [pytest]
 testpaths = dectate
