Add docs testenv to tox and travis

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8
+envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8,docs
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -23,6 +23,12 @@ deps = -e{toxinidir}[pep8]
 usedevelop = False
 
 commands = flake8 --show-source dectate setup.py
+
+[testenv:docs]
+basepython = python3.5
+deps = -e{toxinidir}[docs]
+
+commands = sphinx-build -b doctest doc {envtmpdir}
 
 [pytest]
 testpaths = dectate
