--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ commands = py.test {posargs}
 
 [testenv:coverage]
 basepython = python3.5
-deps = {[testenv]deps}
-       -e{toxinidir}[coverage]
+deps = -e{toxinidir}[test,coverage]
 
 commands =
     coverage run --source dectate -m py.test dectate {posargs}
