--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
+include .coveragerc
 include *.txt *.rst *.cfg *.py *.ini
 exclude .installed.cfg
 recursive-include dectate *.py
 recursive-include tests *.py
 recursive-include doc *.rst Makefile *.py *.bat
+recursive-include scenarios *.py
+recursive-include scenarios *.txt
