--- a/tox.ini
+++ b/tox.ini
@@ -13,21 +13,17 @@ basepython = python3.5
 deps = -e{toxinidir}[test,coverage]
 
 commands =
-    coverage run --source dectate -m py.test dectate {posargs}
-    coverage report -m
+    py.test --cov {posargs}
 
 [testenv:pep8]
 basepython = python3.5
 deps = -e{toxinidir}[pep8]
 usedevelop = False
 
-commands = flake8 --show-source dectate setup.py
+commands = flake8 dectate setup.py
 
 [testenv:docs]
 basepython = python3.5
 deps = -e{toxinidir}[docs]
 
 commands = sphinx-build -b doctest doc {envtmpdir}
-
-[pytest]
-testpaths = dectate
