Use extras directly in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,25 +5,25 @@ skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
-deps = -e{toxinidir}[test]
+extras = test
+
 commands = py.test {posargs}
 
 [testenv:coverage]
 basepython = python3.5
-deps = -e{toxinidir}[test,coverage]
+extras = test
+         coverage
 
-commands =
-    py.test --cov {posargs}
+commands = py.test --cov {posargs}
 
 [testenv:pep8]
 basepython = python3.5
-deps = -e{toxinidir}[pep8]
-usedevelop = False
+extras = pep8
 
 commands = flake8 dectate setup.py
 
 [testenv:docs]
 basepython = python3.5
-deps = -e{toxinidir}[docs]
+extras = docs
 
 commands = sphinx-build -b doctest doc {envtmpdir}
