--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+minversion = 2.4.1
 envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8,docs
 skipsdist = True
 skip_missing_interpreters = True
