--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,8 @@ commands = py.test --cov {posargs}
 basepython = python3.7
 extras = pep8
 
-commands = flake8 dectate setup.py
+commands = flake8 dectate *.py
+           black --check .
 
 [testenv:docs]
 basepython = python3.7
