--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,6 @@
+include *.txt *.rst *.cfg *.py *.ini *.toml *.yaml
 include .coveragerc
-include *.txt *.rst *.cfg *.py *.ini
 exclude .installed.cfg
 recursive-include dectate *.py
-recursive-include tests *.py
 recursive-include doc *.rst Makefile *.py *.bat
-recursive-include scenarios *.py
-recursive-include scenarios *.txt
+recursive-include scenarios *.py *.txt
