--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py34, py35, py36, py37, py38, pypy3, coverage, pep8, docs
+envlist = py36, py37, py38, pypy3, coverage, pep8, docs
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -7,20 +7,20 @@ skip_missing_interpreters = True
 usedevelop = True
 extras = test
 
-commands = py.test {posargs}
+commands = pytest {posargs}
 
 [testenv:coverage]
 basepython = python3.7
 extras = test
          coverage
 
-commands = py.test --cov {posargs}
+commands = pytest --cov {posargs}
 
 [testenv:pep8]
 basepython = python3.7
 extras = pep8
 
-commands = flake8 dectate *.py
+commands = flake8 dectate
            black --check .
 
 [testenv:docs]
