--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,25 @@
 [tox]
-envlist = py36, py37, py38, pypy3, coverage, pep8, docs
+envlist = py36, py37, py38, pypy3, coverage, pre-commit, docs
 skipsdist = True
 skip_missing_interpreters = True
 
 [testenv]
 usedevelop = True
 extras = test
-
 commands = pytest {posargs}
 
 [testenv:coverage]
-basepython = python3.7
+basepython = python3
 extras = test
          coverage
-
 commands = pytest --cov {posargs}
 
-[testenv:pep8]
-basepython = python3.7
-extras = pep8
-
-commands = flake8 dectate
-           black --check .
+[testenv:pre-commit]
+deps = pre-commit
+skip_install = true
+commands = pre-commit run --all-files
 
 [testenv:docs]
-basepython = python3.7
+basepython = python3
 extras = docs
-
 commands = sphinx-build -b doctest doc {envtmpdir}
