Use coverage instead of pytest-cov
deleted:    .travis.yml
modified:   CHANGES.txt
modified:   setup.py
modified:   tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, pypy3, coverage, pre-commit, docs
+envlist = py36, py37, py38, py39, pypy3, coverage, pre-commit, docs
 skipsdist = True
 skip_missing_interpreters = True
 
@@ -12,7 +12,10 @@ commands = pytest {posargs}
 basepython = python3
 extras = test
          coverage
-commands = pytest --cov {posargs}
+commands =
+    coverage erase
+    coverage run -m pytest {posargs}
+    coverage report -m
 
 [testenv:pre-commit]
 deps = pre-commit
@@ -23,3 +26,10 @@ commands = pre-commit run --all-files
 basepython = python3
 extras = docs
 commands = sphinx-build -b doctest doc {envtmpdir}
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, pre-commit, mypy, coverage
